# fasm-tinkering

./: .gitignore  CMakeLists.txt  README.md  foo.asm  foo.nc  setfasm.bat
CPPINCLUDE/: codegen.h
CPPSOURCE/: codegen_pe32.cpp  exec.cpp  lexxer.cpp  main.cpp
EXAMPLES/OPENGL/: OPENGL.ASM
EXAMPLES/WIN64/CONSOLE/: console.asm
